--- a/public/login/css/main.scss
+++ b/public/login/css/main.scss
@@ -75,7 +75,7 @@
 body {
     position: relative;
     overflow-x: hidden;
-    background-color: #E5E5E5;
+    background-color: #e5e5e5;
 }
 body,
 html {
@@ -89,11 +89,54 @@ html {
 }
 
 header {
-    .navbar-light{
+    nav {
+        form {
+            input {
+                border: none !important;
+            }
+            .btn-pesquisar{
+                background-color: white;
+                position: relative;
+                right: 18%;
+                height: 38px;
+            }
+
+        }
+        width: 100%;
         height: 60px;
+        .icones-1 {
+            .notificacao {
+                display: flex;
+                img {
+                    padding-left: 10px;
+                }
+            }
+            .user {
+                background-color: #ffc145;
+                border-radius: 20px;
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+            .info {
+                line-height: 18px;
+                .name-user {
+                    span {
+                        font-weight: 900;
+                        color: #404040;
+                    }
+                }
+                .conta-info {
+                    span {
+                        font-weight: 400;
+                        color: #aeaeae;
+                    }
+                }
+            }
+        }
     }
 }
-
 
 /*-------------------------------*/
 /*           Wrappers            */
@@ -119,7 +162,7 @@ header {
     margin-left: -220px;
     overflow-y: auto;
     overflow-x: hidden;
-    background: #013B95;
+    background: #013b95;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -227,7 +270,7 @@ header {
     height: 65px;
     padding-top: 1em;
     padding-left: 3em;
-    img{
+    img {
         width: 100%;
     }
 }
@@ -309,6 +352,7 @@ a[href*="#followme"]::before {
     content: "\f099" !important;
     color: #0084b4;
 }
+
 /*-------------------------------*/
 /*       Hamburger-Cross         */
 /*-------------------------------*/
