--- a/public/painel/css/main.scss
+++ b/public/painel/css/main.scss
@@ -48,6 +48,11 @@ $fontPrimary: Source Sans Pro;
     margin-top: -8px;
 }
 
+.swal2-deny {
+    padding: .375rem .75rem;
+    font-size: 1rem;
+}
+
 .select2-container {
     max-width: 100%;
 }
